k8s/talos/apps/bentopdf/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bentopdf
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lan
      namespace: traefik
      sectionName: websecure

  hostnames:
    - bentopdf.home.lanlord.eu

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: authentik-server
          namespace: authentik
          port: 80
          weight: 1
